deleted previous login

--- a/src/app/component/gallery/gallery.component.html
+++ b/src/app/component/gallery/gallery.component.html
@@ -5,110 +5,110 @@
     <p class="w3ls_head_para w3ls_head_para1">WELCOME BACK GALLERY GAME PARTICIPANTS</p>
     <div class="w3layouts_gallery_grids">
       <ul class="w3l_gallery_grid" id="lightGallery">
-        <li data-title="Games" data-desc="Lorem Ipsum is simply dummy text of the printing."
-            data-src="assets/images/ab.jpg"
+        <li data-title="K/D/A Akali" data-desc="If you look dangerous, you better be dangerous."
+            data-src="assets/images/g.jpg"
             data-responsive-src="assets/images/8.jpg">
           <div class="w3layouts_gallery_grid1 box">
             <a href="#">
-              <img src="assets/images/ab.jpg" alt=" " class="img-responsive"/>
+              <img src="assets/images/g.jpg" alt=" " class="img-responsive"/>
               <div class="overbox">
-                <h4 class="title overtext"> Fantasy World</h4>
+                <h4 class="title overtext"> World of Legends</h4>
               </div>
             </a>
           </div>
         </li>
-        <li data-title="Games" data-desc="Lorem Ipsum is simply dummy text of the printing."
+        <li data-title="Sylas" data-desc="I am no traitor. I am the true Demacia."
             data-src="assets/images/g1.jpg"
             data-responsive-src="assets/images/9.jpg">
           <div class="w3layouts_gallery_grid1 box">
             <a href="#">
               <img src="assets/images/g1.jpg" alt=" " class="img-responsive"/>
               <div class="overbox">
-                <h4 class="title overtext"> Fantasy World</h4>
+                <h4 class="title overtext"> World of Legends</h4>
               </div>
             </a>
           </div>
         </li>
-        <li data-title="Games" data-desc="Lorem Ipsum is simply dummy text of the printing."
+        <li data-title="K/D/A Ahri" data-desc="Human emotions can be more volatile than even the deepest magic."
             data-src="assets/images/g2.jpg"
             data-responsive-src="assets/images/10.jpg">
           <div class="w3layouts_gallery_grid1 box">
             <a href="#">
               <img src="assets/images/g2.jpg" alt=" " class="img-responsive"/>
               <div class="overbox">
-                <h4 class="title overtext"> Fantasy World</h4>
+                <h4 class="title overtext"> World of Legends</h4>
               </div>
             </a>
           </div>
         </li>
-        <li data-title="Games" data-desc="Lorem Ipsum is simply dummy text of the printing."
+        <li data-title="Frosted Ezreal" data-desc="If I don’t know the rules, then how can I be breaking them?"
             data-src="assets/images/g3.jpg"
             data-responsive-src="assets/images/11.jpg">
           <div class="w3layouts_gallery_grid1 box">
             <a href="#">
               <img src="assets/images/g3.jpg" alt=" " class="img-responsive"/>
               <div class="overbox">
-                <h4 class="title overtext"> Fantasy World</h4>
+                <h4 class="title overtext"> World of Legends</h4>
               </div>
             </a>
           </div>
         </li>
-        <li data-title="Games" data-desc="Lorem Ipsum is simply dummy text of the printing."
+        <li data-title="SKT T1 LeBlanc" data-desc="A rose cannot grow in darkness. It dies, and the darkness grows…"
             data-src="assets/images/g4.jpg"
             data-responsive-src="assets/images/12.jpg">
           <div class="w3layouts_gallery_grid1 box">
             <a href="#">
               <img src="assets/images/g4.jpg" alt=" " class="img-responsive"/>
               <div class="overbox">
-                <h4 class="title overtext"> Fantasy World</h4>
+                <h4 class="title overtext"> World of Legends</h4>
               </div>
             </a>
           </div>
         </li>
-        <li data-title="Games" data-desc="Lorem Ipsum is simply dummy text of the printing."
+        <li data-title="Mecha Malphite Promo" data-desc="Beware, minions of chaos! The Shard of the Monolith has come."
             data-src="assets/images/g5.jpg"
             data-responsive-src="assets/images/13.jpg">
           <div class="w3layouts_gallery_grid1 box">
             <a href="#">
               <img src="assets/images/g5.jpg" alt=" " class="img-responsive"/>
               <div class="overbox">
-                <h4 class="title overtext"> Fantasy World</h4>
+                <h4 class="title overtext"> World of Legends</h4>
               </div>
             </a>
           </div>
         </li>
-        <li data-title="Games" data-desc="Lorem Ipsum is simply dummy text of the printing."
-            data-src="assets/images/g8.jpg"
-            data-responsive-src="assets/images/14.jpg">
-          <div class="w3layouts_gallery_grid1 box">
-            <a href="#">
-              <img src="assets/images/g8.jpg" alt=" " class="img-responsive"/>
-              <div class="overbox">
-                <h4 class="title overtext"> Fantasy World</h4>
-              </div>
-            </a>
-          </div>
-        </li>
-        <li data-title="Games" data-desc="Lorem Ipsum is simply dummy text of the printing."
+        <li data-title="Lanh-Yasuo" data-desc="Death is like the wind—always by my side."
             data-src="assets/images/g6.jpg"
-            data-responsive-src="assets/images/15.jpg">
+            data-responsive-src="assets/images/14.jpg">
           <div class="w3layouts_gallery_grid1 box">
             <a href="#">
               <img src="assets/images/g6.jpg" alt=" " class="img-responsive"/>
               <div class="overbox">
-                <h4 class="title overtext"> Fantasy World</h4>
+                <h4 class="title overtext"> World of Legends</h4>
               </div>
             </a>
           </div>
         </li>
-        <li data-title="Games" data-desc="Lorem Ipsum is simply dummy text of the printing."
+        <li data-title="Trung Vlad" data-desc="Time has made me wiser, but no more patient."
             data-src="assets/images/g7.jpg"
-            data-responsive-src="assets/images/16.jpg">
+            data-responsive-src="assets/images/15.jpg">
           <div class="w3layouts_gallery_grid1 box">
             <a href="#">
               <img src="assets/images/g7.jpg" alt=" " class="img-responsive"/>
               <div class="overbox">
-                <h4 class="title overtext"> Fantasy World</h4>
+                <h4 class="title overtext"> World of Legends</h4>
+              </div>
+            </a>
+          </div>
+        </li>
+        <li data-title="Miss Phu" data-desc="The bigger the risk, the bigger the bounty."
+            data-src="assets/images/g8.jpg"
+            data-responsive-src="assets/images/16.jpg">
+          <div class="w3layouts_gallery_grid1 box">
+            <a href="#">
+              <img src="assets/images/g8.jpg" alt=" " class="img-responsive"/>
+              <div class="overbox">
+                <h4 class="title overtext"> World of Legends</h4>
               </div>
             </a>
           </div>
