--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -10,7 +10,7 @@
           <span class="icon-bar"></span>
         </button>
         <div class="w3_navigation_pos">
-          <h1><a href="index.html"><span>World</span> of Legend</a></h1>
+          <h1><a href="index.html"><span>World</span> of Legends</a></h1>
         </div>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,8 +19,8 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#about"><span data-hover="About">About</span></a></li>
             <li><a class="scroll" href="#services"><span data-hover="Services">Services</span></a></li>
-            <li><a class="scroll" href="#"><span data-hover="Guides">Guides</span></a></li>
             <li><a class="scroll" href="#"><span data-hover="Champions">Champions</span></a></li>
+            <li><a class="scroll" href="#"><span data-hover="Blog">Blog</span></a></li>
             <li><a class="scroll" href="#"><span data-hover="Log In">Log In</span></a></li>
             <li><a class="scroll" href="#"><span data-hover="Register">Register</span></a></li>
           </ul>
