--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,4 +1,3 @@
-<!-- footer -->
 <div class="w3l_footer">
   <div class="container">
     <div class="w3ls_footer_grids">
@@ -9,7 +8,7 @@
           </div>
           <div class="w3ls_footer_grid_leftr">
             <h4>Location</h4>
-            <p>3030 New York, NY, USA</p>
+            <p>23-TT-01, MonCity, Ha Noi, VN</p>
           </div>
           <div class="clearfix"></div>
         </div>
@@ -19,7 +18,7 @@
           </div>
           <div class="w3ls_footer_grid_leftr">
             <h4>Email</h4>
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="mailto:fourhorsemen987@gmail.com">fourhorsemen987@gmail.com</a>
           </div>
           <div class="clearfix"></div>
         </div>
@@ -29,7 +28,7 @@
           </div>
           <div class="w3ls_footer_grid_leftr">
             <h4>Call Us</h4>
-            <p>(+000) 003 003 0052</p>
+            <p>(+84) 123 456 789</p>
           </div>
           <div class="clearfix"></div>
         </div>
@@ -38,7 +37,6 @@
     </div>
   </div>
   <div class="w3l_footer_pos">
-    <p>© 2017 Fantasy World. All Rights Reserved | Design by <a href="https://w3layouts.com/">W3layouts</a></p>
+    <p>© 2019 World of Legends. All Rights Reserved | Design by <a href="https://w3layouts.com/">4Horsemen</a></p>
   </div>
 </div>
-<!-- //footer -->
