simple form login

--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -6,4 +6,5 @@
   <div class="textbox">
     <input type="password" placeholder="Password">
   </div>
+  <input type="button" value="Sign in" class="btn">
 </div>
