--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,1 @@
-<app-navbar></app-navbar>
-<app-banner></app-banner>
-<app-modal></app-modal>
-<app-about></app-about>
-<app-service></app-service>
-<app-gallery></app-gallery>
-<app-project></app-project>
-<app-contact></app-contact>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
