--- a/src/app/component/homepage/homepage.component.html
+++ b/src/app/component/homepage/homepage.component.html
@@ -1,3 +1,9 @@
-<p>
-  homepage works!
-</p>
+<app-navbar></app-navbar>
+<app-banner></app-banner>
+<app-modal></app-modal>
+<app-about></app-about>
+<app-service></app-service>
+<app-gallery></app-gallery>
+<app-project></app-project>
+<app-contact></app-contact>
+<app-footer></app-footer>
