created routing for login component and worked

--- a/src/app/component/homepage/navbar/navbar.component.html
+++ b/src/app/component/homepage/navbar/navbar.component.html
@@ -21,7 +21,7 @@
             <li><a class="scroll" href="#services"><span data-hover="Services">Services</span></a></li>
             <li><a class="scroll" href="#"><span data-hover="Champions">Champions</span></a></li>
             <li><a class="scroll" href="#"><span data-hover="Blog">Blog</span></a></li>
-            <li><a class="scroll" href="#"><span data-hover="Log In">Log In</span></a></li>
+            <li><a class="scroll" routerLink="/login"><span data-hover="Log In">Log In</span></a></li>
             <li><a class="scroll" href="#"><span data-hover="Register">Register</span></a></li>
           </ul>
         </nav>
