--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,10 +1,12 @@
-<div class="login-box">
-  <h1>Login</h1>
-  <div class="textbox">
-    <input type="text" placeholder="Username">
+<div class="login">
+  <div class="login-box">
+    <h1>Login</h1>
+    <div class="textbox">
+      <input type="text" placeholder="Username">
+    </div>
+    <div class="textbox">
+      <input type="password" placeholder="Password">
+    </div>
+    <input type="button" value="Sign in" class="btn">
   </div>
-  <div class="textbox">
-    <input type="password" placeholder="Password">
-  </div>
-  <input type="button" value="Sign in" class="btn">
 </div>
