changed color submit button login

--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -7,6 +7,6 @@
     <div class="textbox">
       <input type="password" placeholder="Password">
     </div>
-    <input type="button" value="Sign in" class="btn">
+    <input type="submit" value="Sign in" class="btn-submit">
   </div>
 </div>
