--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,11 +1,13 @@
 <div class="login">
   <div class="login-box">
     <h1>Login</h1>
-    <div class="textbox">
-      <input type="text" placeholder="Username">
+    <div class="textbox row">
+      <i class="fas fa-user col-md-2"></i>
+      <input type="text" placeholder="Username" class="col-md-10">
     </div>
-    <div class="textbox">
-      <input type="password" placeholder="Password">
+    <div class="textbox row">
+      <i class="fas fa-lock col-md-2"></i>
+      <input type="password" placeholder="Password" class="col-md-10">
     </div>
     <input type="submit" value="Sign in" class="btn-submit">
   </div>
