--- a/src/app/component/login/login.component.css
+++ b/src/app/component/login/login.component.css
@@ -26,15 +26,27 @@
   border-bottom: 1px solid #4caf50;
 }
 
-.btn-submit {
-  color: #0d0d0d;
-}
-
-.textbox i {
-  position: relative;
-  top: 0.5em;
-}
-
 .textbox input {
+  border: none;
+  outline: none;
+  background: none;
+  color: #fff;
+  font-size: 18px;
+}
 
+.btn-submit {
+  background: none;
+  border: 2px solid #4caf50;
+  color: #fff;
+  padding: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 12px 0;
+  outline: none;
+  overflow: hidden;
+}
+
+.btn-submit:hover {
+  border: 2px solid #556aaf;
+  transition: border-width 0.6s linear;
 }
