routerlink for register component

--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -10,6 +10,6 @@
       <input type="password" placeholder="Password" class="col-md-10">
     </div>
     <input type="submit" value="Sign in" class="btn-submit col-md-12">
-    <a href="#">Don't have an account ?</a>
+    <a routerLink="/register">Don't have an account ?</a>
   </div>
 </div>
