--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login">
-  <div class="login-box">
+  <form class="login-box">
     <h1>Login</h1>
     <div class="textbox row">
       <i class="fas fa-user col-md-2"></i>
@@ -11,5 +11,5 @@
     </div>
     <input type="submit" value="Sign in" class="btn-submit col-md-12">
     <a routerLink="/register">Don't have an account ?</a>
-  </div>
+  </form>
 </div>
