--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -9,7 +9,7 @@
       <i class="fas fa-lock col-md-2"></i>
       <input type="password" placeholder="Password" class="col-md-10">
     </div>
-    <input type="submit" value="Sign in" class="btn-submit col-md-12">
+    <input type="submit" value="Sign in" class="btn-submit col-md-12" (click)="onLogin()">
     <a routerLink="/register">Don't have an account ?</a>
   </form>
 </div>
